# Mishka

./: .gitignore  CLAUDE.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
android/: build.gradle.kts
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  process_helper.c
android/src/main/kotlin/top/yukonga/mishka/: MainActivity.kt  MishkaApplication.kt
android/src/main/kotlin/top/yukonga/mishka/service/: AndroidProfileFileManager.kt  BootReceiver.kt  ConfigGenerator.kt  DynamicNotificationManager.kt  IptablesIntranet.kt  MihomoPrefetcher.kt  MihomoRunner.kt  MihomoValidator.kt  MishkaRootService.kt  MishkaTileService.kt  MishkaTunService.kt  NotificationHelper.kt  ProcessHelper.kt  ProfileFileOps.kt  ProfileReceiver.kt  ProfileWorker.kt  RootHelper.kt  RootTetherHijacker.kt  RootTproxyApplier.kt  RuntimeOverrideBuilder.kt
android/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_tile.xml
android/src/main/res/values/: strings.xml  themes.xml
android/src/main/res/values-zh-rCN/: strings.xml
buildSrc/src/main/kotlin/: ProjectConfig.kt
desktop/: build.gradle.kts
desktop/src/desktopMain/kotlin/: Main.kt
gradle/: libs.versions.toml
shared/: build.gradle.kts  compose_compiler_config.conf
shared/schemas/top.yukonga.mishka.data.database.AppDatabase/: 1.json
shared/src/commonMain/composeResources/values/: strings.xml
shared/src/commonMain/composeResources/values-zh-rCN/: strings.xml
shared/src/commonMain/kotlin/top/yukonga/mishka/: App.kt
(+139 files in other folders)
